<menu xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	tools:context="com.mobile_dev.todoApp.MainActivity">
	<item
		android:id="@+id/action_reset"
		android:icon="@drawable/ic_reset"
		android:title="@string/reset"
		android:visible="false"
		app:showAsAction="ifRoom" />
	<item
		android:id="@+id/action_update"
		android:icon="@drawable/update_icon"
		android:title="@string/update"
		app:showAsAction="always" />
	<item
		android:id="@+id/action_delete"
		android:icon="@drawable/delete_icon"
		android:title="@string/delete"
		app:showAsAction="always" />
	<item
		android:id="@+id/action_add"
		android:icon="@drawable/custom_add_icon"
		android:title="@string/add"
		app:showAsAction="always" />

</menu>
