<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

  <TextView
      android:id="@+id/label_name"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="50dp"
      android:text="@string/label_name" />


  <TextView
      android:id="@+id/label_description"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@+id/label_name"
      android:layout_marginEnd="20dp"
      android:layout_marginRight="20dp"
      android:layout_marginTop="50dp"
      android:text="@string/label_description" />

  <TextView
      android:id="@+id/label_deadline"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@+id/label_description"
      android:layout_marginTop="50dp"
      android:text="@string/label_deadline" />

  <TextView
      android:id="@+id/label_priority"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@+id/label_deadline"
      android:layout_marginTop="50dp"
      android:text="@string/label_priority" />

  <EditText
      android:id="@+id/input_name"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignBottom="@+id/label_name"
      android:layout_marginLeft="70dp"
      android:layout_toRightOf="@+id/label_name"
      android:hint="MTH182-66"
      android:orientation="horizontal" />

  <EditText
      android:id="@+id/input_description"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignBottom="@+id/label_description"
      android:layout_alignLeft="@+id/input_name"
      android:layout_alignParentEnd="true"
      android:layout_alignParentRight="true"
      android:layout_alignStart="@+id/input_name"
      android:layout_toEndOf="@+id/label_description"
      android:layout_toRightOf="@+id/label_description"
      android:hint="Chapter 5.2" />

  <EditText
      android:id="@+id/input_deadline"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignBottom="@+id/label_deadline"
      android:layout_alignLeft="@+id/input_description"
      android:layout_alignParentRight="true"
      android:layout_toRightOf="@+id/label_deadline"
      android:ems="10" />

  <EditText
      android:id="@+id/input_priority"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignBottom="@+id/label_priority"
      android:layout_alignLeft="@+id/input_deadline"
      android:layout_alignParentRight="true"
      android:layout_toRightOf="@+id/label_priority"
      android:ems="10"
      android:hint="1-3"
      android:inputType="number" />

  <Button
      android:id="@+id/button_add"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignRight="@+id/input_priority"
      android:layout_below="@+id/label_priority"
      android:layout_marginTop="100dp"
      android:onClick="insert"
      android:text="@string/button_add" />

  <Button
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignLeft="@+id/label_priority"
      android:layout_below="@+id/label_priority"
      android:layout_marginTop="100dp"
      android:onClick="goBack"
      android:text="@string/button_back" />

  <Button
      android:id="@+id/choose_deadline"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignLeft="@id/input_deadline"
      android:layout_alignStart="@id/input_deadline"
      android:layout_below="@id/input_deadline"
      android:layout_toEndOf="@id/input_deadline"
      android:layout_toRightOf="@id/input_deadline"
      android:layout_marginTop="-10dp"
      android:onClick="chooseDate"
      android:text="Choose Date"
      android:textSize="20sp" />

  <!--<DatePicker-->
  <!--android:id="@+id/datePicker"-->
  <!--android:layout_width="wrap_content"-->
  <!--android:layout_height="wrap_content"-->
  <!--android:layout_alignParentLeft="true"-->
  <!--android:layout_alignParentStart="true"-->
  <!--android:layout_alignParentTop="true"-->
  <!--android:layout_marginTop="91dp" />-->


</RelativeLayout>
